--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "next lint"
 	},
 	"devDependencies": {
-		"@types/node": "22.9.0",
+		"@types/node": "^22.9.3",
 		"@types/react": "18.3.12",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.49",
