--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
 		"next": "^15.0.3",
-		"next-nprogress-bar": "^2.3.15",
+		"next-nprogress-bar": "github:enzocomics/next-nprogress-bar",
 		"next-runtime-env": "^3.2.2",
 		"nprogress": "github:enzocomics/nprogress",
 		"react": "^18.3.1",
