--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"baseUrl": "src/",
 		"paths": {
-			"@/*": ["*"]
+			"$/*": ["*"],
+			"@/*": ["./app/*"]
 		},
 		"target": "ES2017",
 		"lib": ["dom", "dom.iterable", "esnext"],
