--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
 	},
 	"dependencies": {
 		"next": "^15.1.0",
-		"react": "^19.0.0",
+		"react": "^19.0.0x",
 		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "22.10.2",
 		"@types/react": "19.0.1",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16",
 		"typescript": "5.7.2"
 	}
 }
