--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "next build && copyfiles -r public .next/standalone/ && copyfiles -r .next/static .next/standalone/.next/",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"next": "^15.1.0",
+		"next-international": "^1.3.1",
 		"react": "^19.0.0x",
 		"react-dom": "^19.0.0"
 	},
@@ -14,6 +15,7 @@
 		"@types/node": "22.10.2",
 		"@types/react": "19.0.1",
 		"autoprefixer": "^10.4.20",
+		"copyfiles": "^2.4.1",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.16",
 		"typescript": "5.7.2"
