--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"next": "^15.1.0",
 		"next-international": "^1.3.1",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0x",
 		"react-dom": "^19.0.0"
 	},
