--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.0",
+		"@heroicons/react": "^2.2.0",
 		"next": "^15.1.0",
 		"next-international": "^1.3.1",
 		"next-themes": "^0.4.4",
